--- a/PriceModelView/Base.lproj/Main.storyboard
+++ b/PriceModelView/Base.lproj/Main.storyboard
@@ -8,6 +8,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12072"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -119,36 +120,29 @@
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bigCrown" translatesAutoresizingMaskIntoConstraints="NO" id="naA-qX-lr6">
                                                     <rect key="frame" x="21" y="0.0" width="75" height="63"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="75" id="AUx-1a-EKF"/>
                                                         <constraint firstAttribute="width" secondItem="naA-qX-lr6" secondAttribute="height" multiplier="25:21" id="aph-07-akG"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xNN-7e-cyb">
-                                                    <rect key="frame" x="53" y="31" width="10.5" height="24"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
-                                                    <color key="textColor" red="1" green="1" blue="1" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Chg-5b-6g4">
-                                                    <rect key="frame" x="117" y="2" width="85" height="61"/>
+                                                    <rect key="frame" x="117" y="2" width="134" height="61"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="260" verticalHuggingPriority="251" text="159р / шт" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="5tB-JZ-5ci">
-                                                            <rect key="frame" x="0.0" y="0.0" width="85" height="16"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="134" height="16"/>
                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                                                             <color key="textColor" red="0.18431372549019609" green="0.58431372549019611" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="BhL-7s-qZe">
-                                                            <rect key="frame" x="0.0" y="21" width="85" height="40"/>
+                                                            <rect key="frame" x="0.0" y="21" width="134" height="40"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 Корона" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="kRp-Tn-op7">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="85" height="20.5"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="134" height="20.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="159р" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="A4f-l5-dJX">
-                                                                    <rect key="frame" x="0.0" y="20.5" width="85" height="19.5"/>
+                                                                    <rect key="frame" x="0.0" y="20.5" width="134" height="19.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                                     <color key="textColor" red="0.55294117647058827" green="0.55294117647058827" blue="0.55294117647058827" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
@@ -158,9 +152,8 @@
                                                     </subviews>
                                                 </stackView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0o2-Ac-sNS" customClass="PriceBuyButton" customModule="PriceModelView" customModuleProvider="target">
-                                                    <rect key="frame" x="214" y="16.5" width="95" height="32"/>
+                                                    <rect key="frame" x="263" y="15.5" width="101" height="34.5"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="95" id="dSn-VE-QCg"/>
                                                         <constraint firstAttribute="width" secondItem="0o2-Ac-sNS" secondAttribute="height" multiplier="50:17" id="rge-Rz-Y7c"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -168,15 +161,24 @@
                                                         <color key="titleColor" red="0.11764705882352941" green="0.5490196078431373" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     </state>
                                                 </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xNN-7e-cyb">
+                                                    <rect key="frame" x="53" y="22" width="10.5" height="41"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="Chg-5b-6g4" firstAttribute="leading" secondItem="naA-qX-lr6" secondAttribute="trailing" constant="21" id="95R-SH-Yvg"/>
+                                                <constraint firstItem="0o2-Ac-sNS" firstAttribute="width" secondItem="iiw-6z-eie" secondAttribute="width" multiplier="0.27" id="9GD-C4-S48"/>
                                                 <constraint firstItem="0o2-Ac-sNS" firstAttribute="centerY" secondItem="Chg-5b-6g4" secondAttribute="centerY" id="Cth-jm-eCm"/>
                                                 <constraint firstItem="naA-qX-lr6" firstAttribute="leading" secondItem="iiw-6z-eie" secondAttribute="leadingMargin" constant="13" id="DAm-Qj-FPQ"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="0o2-Ac-sNS" secondAttribute="trailing" constant="3" id="Ufx-Kb-UTR"/>
+                                                <constraint firstItem="naA-qX-lr6" firstAttribute="width" secondItem="iiw-6z-eie" secondAttribute="width" multiplier="0.2" id="aBH-rI-Mht"/>
+                                                <constraint firstItem="xNN-7e-cyb" firstAttribute="height" secondItem="naA-qX-lr6" secondAttribute="height" multiplier="0.65" id="fDq-hD-hfW"/>
+                                                <constraint firstItem="xNN-7e-cyb" firstAttribute="bottom" secondItem="naA-qX-lr6" secondAttribute="bottom" id="gF7-GK-miN"/>
                                                 <constraint firstItem="xNN-7e-cyb" firstAttribute="centerX" secondItem="naA-qX-lr6" secondAttribute="centerX" id="gbe-34-mpa"/>
                                                 <constraint firstItem="Chg-5b-6g4" firstAttribute="top" secondItem="iiw-6z-eie" secondAttribute="topMargin" constant="-6" id="jGd-CQ-iRX"/>
-                                                <constraint firstItem="xNN-7e-cyb" firstAttribute="top" secondItem="naA-qX-lr6" secondAttribute="bottom" constant="-32" id="rXy-XZ-Uq3"/>
                                                 <constraint firstItem="naA-qX-lr6" firstAttribute="top" secondItem="iiw-6z-eie" secondAttribute="topMargin" constant="-8" id="szJ-tD-sjh"/>
                                                 <constraint firstItem="0o2-Ac-sNS" firstAttribute="leading" secondItem="Chg-5b-6g4" secondAttribute="trailing" constant="12" id="wJh-rn-Ezz"/>
                                             </constraints>
@@ -202,13 +204,13 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Стань первым!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="eAg-4b-EOG">
-                                        <rect key="frame" x="16" y="131" width="343" height="43"/>
+                                        <rect key="frame" x="16" y="128" width="343" height="43"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                         <color key="textColor" red="0.21568627450980393" green="0.21568627450980393" blue="0.21568627450980393" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Rm6-7p-en1">
-                                        <rect key="frame" x="16" y="181" width="343" height="39"/>
+                                        <rect key="frame" x="16" y="176" width="343" height="38"/>
                                         <string key="text">1 час твоя анкета будет отображаться на 
 верхних позициях раздела «Знакомства»</string>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -244,7 +246,7 @@
                                         </constraints>
                                     </imageView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="smallCrown" translatesAutoresizingMaskIntoConstraints="NO" id="S6H-ij-T0R">
-                                        <rect key="frame" x="108.5" y="81" width="19" height="16"/>
+                                        <rect key="frame" x="111.5" y="81" width="19" height="16"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="16" id="1Gc-h5-9NZ"/>
                                             <constraint firstAttribute="width" constant="19" id="saU-WX-Td0"/>
@@ -288,15 +290,17 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="Rm6-7p-en1" firstAttribute="top" secondItem="eAg-4b-EOG" secondAttribute="bottom" constant="7" id="3sF-sx-x07"/>
+                                    <constraint firstItem="Rm6-7p-en1" firstAttribute="top" secondItem="eAg-4b-EOG" secondAttribute="bottom" constant="5" id="3sF-sx-x07"/>
+                                    <constraint firstItem="eAg-4b-EOG" firstAttribute="height" secondItem="8VN-Qx-gOe" secondAttribute="height" multiplier="0.17" id="5DB-tl-bja"/>
                                     <constraint firstAttribute="trailing" secondItem="eAg-4b-EOG" secondAttribute="trailing" constant="16" id="8zj-Nx-TyC"/>
                                     <constraint firstAttribute="trailing" secondItem="gZt-PA-zID" secondAttribute="trailing" id="91e-5K-Gr6"/>
                                     <constraint firstItem="Rm6-7p-en1" firstAttribute="leading" secondItem="8VN-Qx-gOe" secondAttribute="leading" constant="16" id="D3S-fD-aeB"/>
                                     <constraint firstItem="gZt-PA-zID" firstAttribute="leading" secondItem="8VN-Qx-gOe" secondAttribute="leading" id="EEF-da-O3r"/>
+                                    <constraint firstItem="eAg-4b-EOG" firstAttribute="top" secondItem="gZt-PA-zID" secondAttribute="bottom" id="W8g-Fp-jtc"/>
                                     <constraint firstItem="gZt-PA-zID" firstAttribute="top" secondItem="8VN-Qx-gOe" secondAttribute="top" id="bfx-c1-xiu"/>
                                     <constraint firstAttribute="trailing" secondItem="Rm6-7p-en1" secondAttribute="trailing" constant="16" id="dYr-Vg-PVy"/>
-                                    <constraint firstItem="eAg-4b-EOG" firstAttribute="top" secondItem="8VN-Qx-gOe" secondAttribute="top" constant="131" id="tfn-4R-rDb"/>
                                     <constraint firstAttribute="width" secondItem="8VN-Qx-gOe" secondAttribute="height" multiplier="375:254" id="yNz-Id-Mbd"/>
+                                    <constraint firstItem="Rm6-7p-en1" firstAttribute="height" secondItem="8VN-Qx-gOe" secondAttribute="height" multiplier="0.15" id="zAF-QE-Ay0"/>
                                     <constraint firstItem="eAg-4b-EOG" firstAttribute="leading" secondItem="8VN-Qx-gOe" secondAttribute="leading" constant="16" id="zPM-hr-AbX"/>
                                 </constraints>
                             </view>
@@ -370,7 +374,7 @@
                             <constraint firstItem="mHW-uT-N0j" firstAttribute="leading" secondItem="6TU-qw-PL6" secondAttribute="trailing" constant="58" id="XNj-rO-EYc"/>
                             <constraint firstItem="oR5-MG-Jih" firstAttribute="leading" secondItem="3cR-jm-Cfn" secondAttribute="leadingMargin" constant="-16" id="a26-xc-is9"/>
                             <constraint firstAttribute="trailingMargin" secondItem="oR5-MG-Jih" secondAttribute="trailing" constant="-16" id="bKS-ij-k8Z"/>
-                            <constraint firstItem="6TU-qw-PL6" firstAttribute="leading" secondItem="S6H-ij-T0R" secondAttribute="trailing" constant="13" id="ceu-dI-Mb4"/>
+                            <constraint firstItem="6TU-qw-PL6" firstAttribute="leading" secondItem="S6H-ij-T0R" secondAttribute="trailing" constant="10" id="ceu-dI-Mb4"/>
                             <constraint firstItem="G38-0x-gcf" firstAttribute="top" secondItem="oR5-MG-Jih" secondAttribute="bottom" id="clu-p6-Gbd"/>
                             <constraint firstItem="8VN-Qx-gOe" firstAttribute="top" secondItem="6TU-qw-PL6" secondAttribute="bottom" constant="-100" id="e9v-z0-dbt"/>
                             <constraint firstItem="iST-My-q2K" firstAttribute="top" secondItem="6TU-qw-PL6" secondAttribute="bottom" constant="-40" id="iXj-Mq-ZyX"/>
