--- a/PriceModelView/Base.lproj/Main.storyboard
+++ b/PriceModelView/Base.lproj/Main.storyboard
@@ -69,7 +69,7 @@
                         <viewControllerLayoutGuide type="top" id="q7z-D0-1AL"/>
                         <viewControllerLayoutGuide type="bottom" id="G38-0x-gcf"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="3cR-jm-Cfn">
+                    <view key="view" clipsSubviews="YES" contentMode="scaleToFill" id="3cR-jm-Cfn">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -124,16 +124,16 @@
                                                     </constraints>
                                                 </imageView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Chg-5b-6g4">
-                                                    <rect key="frame" x="117" y="2" width="134" height="61"/>
+                                                    <rect key="frame" x="117" y="2" width="134" height="66.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="260" verticalHuggingPriority="251" text="159р / шт" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="5tB-JZ-5ci">
-                                                            <rect key="frame" x="0.0" y="0.0" width="134" height="16"/>
-                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="134" height="21.5"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                                             <color key="textColor" red="0.18431372549019609" green="0.58431372549019611" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="BhL-7s-qZe">
-                                                            <rect key="frame" x="0.0" y="21" width="134" height="40"/>
+                                                            <rect key="frame" x="0.0" y="26.5" width="134" height="40"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 Корона" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="kRp-Tn-op7">
                                                                     <rect key="frame" x="0.0" y="0.0" width="134" height="20.5"/>
@@ -152,7 +152,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0o2-Ac-sNS" customClass="PriceBuyButton" customModule="PriceModelView" customModuleProvider="target">
-                                                    <rect key="frame" x="263" y="15.5" width="101" height="34.5"/>
+                                                    <rect key="frame" x="263" y="18.5" width="101" height="34.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="0o2-Ac-sNS" secondAttribute="height" multiplier="50:17" id="rge-Rz-Y7c"/>
                                                     </constraints>
